; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/gen/extr_termios.c_tcflush.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/gen/extr_termios.c_tcflush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FREAD = common dso_local global i32 0, align 4
@FWRITE = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4
@TIOCFLUSH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tcflush(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* %5, align 4
  switch i32 %7, label %16 [
    i32 130, label %8
    i32 128, label %10
    i32 129, label %12
  ]

8:                                                ; preds = %2
  %9 = load i32, i32* @FREAD, align 4
  store i32 %9, i32* %6, align 4
  br label %18

10:                                               ; preds = %2
  %11 = load i32, i32* @FWRITE, align 4
  store i32 %11, i32* %6, align 4
  br label %18

12:                                               ; preds = %2
  %13 = load i32, i32* @FREAD, align 4
  %14 = load i32, i32* @FWRITE, align 4
  %15 = or i32 %13, %14
  store i32 %15, i32* %6, align 4
  br label %18

16:                                               ; preds = %2
  %17 = load i32, i32* @EINVAL, align 4
  store i32 %17, i32* @errno, align 4
  store i32 -1, i32* %3, align 4
  br label %22

18:                                               ; preds = %12, %10, %8
  %19 = load i32, i32* %4, align 4
  %20 = load i32, i32* @TIOCFLUSH, align 4
  %21 = call i32 @_ioctl(i32 %19, i32 %20, i32* %6)
  store i32 %21, i32* %3, align 4
  br label %22

22:                                               ; preds = %18, %16
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i32 @_ioctl(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
